# DL-Architectures

./: .gitignore
LinearNN/: .gitignore  README.md  modulePresentation.ipynb  setup.cfg
LinearNN/Package/NumpyNN/: __init__.py
LinearNN/Package/NumpyNN/blocks/: Block.py  Network.py  __init__.py
LinearNN/Package/NumpyNN/blocks/layers/: LinearLayer.py  ReLU.py  __init__.py
LinearNN/Package/NumpyNN/blocks/losses/: CrossEntropyLoss.py
LinearNN/Package/NumpyNN/data/: DataLoader.py  Dataset.py  __init__.py
LinearNN/Package/NumpyNN/functional/: __init__.py  normalization.py  softmax.py  standarization.py
LinearNN/Package/NumpyNN/metrics/: __init__.py  accuracy.py
LinearNN/Package/NumpyNN/optimizers/: Optimizer.py  sgd.py
LinearNN/Package/tests/blocks/: test_backward.py
LinearNN/Package/tests/blocks/losses/: test_cross_entropy_loss.py  test_linear_layer.py
LinearNN/Package/tests/functional/: test_functional.py
NNArchitectures/: presentation.ipynb
NNArchitectures/NNArchitectures/: train.py  valid.py
NNArchitectures/NNArchitectures/ImageArchitectures/: AlexNet.py  GoogLeNet.py  ResNet.py  VGG.py
PracticalAspectsOfLearning/: DataAugmentation.ipynb  PracticalAspectsOfLearning.ipynb  paramsSearch.ipynb
RNN/: gru.py  quasiRNN.py  rnn.py
RNN/nameClassification/: lstm.py  namesClassification.ipynb
transformers/: TransformerClassification.py  TransformerGeneration.py  better_trans_block.py  decoder.py  encoder.py  naive_trans_block.py  transformer_translation.py
