[metadata]
name = NumpyNN_SC
version = 1.0.1
author = Sebastian Chwilczynski
description = A small Numpy Package for building simple NN fast
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SebChw/DL-Architectures/tree/master/LinearNN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = Package/NumpyNN
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Package/NumpyNN
